--- a/public/layouts/home.jade
+++ b/public/layouts/home.jade
@@ -29,19 +29,19 @@ div.page-home
         nav.main-menu(role="navigation")
           ul.nav.nav-pills.nav-stacked
             li.active
-              a(href="/#/")
+              a(href="#/")
                 |Home
                 div.link-icon
                   i.icon.icon-shop
 
             li
-              a(href="/#/receitas/2")
+              a(href="#/receitas/2")
                 |Receitas
                 div.link-icon
                   i.icon.icon-food-1
 
             li
-              a(href="/#/receitas/nova")
+              a(href="#/nova")
                 |Nova Receita
                 div.link-icon
                   i.icon.icon-doc-1
@@ -84,11 +84,11 @@ div.page-home
       div.col-md-4
         div.recipe-block
           a(href="index.html")
-            div.recipe-title
+            div.recipe-block-title
               |Bife com Batatas
 
-            div.recipe-image
-              div.recipe-caption
+            div.recipe-block-image
+              div.recipe-block-caption
                 div.item
                   i.icon.icon-clock-1
                   span 15 Min
@@ -103,7 +103,7 @@ div.page-home
 
               img.img-responsive(src="assets/images/static/steak-with-potatoes.jpg")
 
-            div.recipe-footer
+            div.recipe-block-footer
               div.pull-left
                 strong Guilherme Coelho
                 em 14/12/2014
@@ -115,11 +115,11 @@ div.page-home
       div.col-md-4
         div.recipe-block
           a(href="index.html")
-            div.recipe-title
+            div.recipe-block-title
               |Sanduíche de Filet Mignon
 
-            div.recipe-image
-              div.recipe-caption
+            div.recipe-block-image
+              div.recipe-block-caption
                 div.item
                   i.icon.icon-clock-1
                   span 15 Min
@@ -134,7 +134,7 @@ div.page-home
 
               img.img-responsive(src="assets/images/static/filet-mignon-sandwich.jpg")
 
-            div.recipe-footer
+            div.recipe-block-footer
               div.pull-left
                 strong Guilherme Coelho
                 em 14/12/2014
@@ -146,11 +146,11 @@ div.page-home
       div.col-md-4
         div.recipe-block
           a(href="index.html")
-            div.recipe-title
+            div.recipe-block-title
               |Virado de Repolho
 
-            div.recipe-image
-              div.recipe-caption
+            div.recipe-block-image
+              div.recipe-block-caption
                 div.item
                   i.icon.icon-clock-1
                   span 15 Min
@@ -165,7 +165,7 @@ div.page-home
 
               img.img-responsive(src="assets/images/static/sausage-cabbage-and-tomato-1.jpg")
 
-            div.recipe-footer
+            div.recipe-block-footer
               div.pull-left
                 strong Guilherme Coelho
                 em 14/12/2014
