--- a/public/assets/stylesheets/sass/global/components/_main-menu.sass
+++ b/public/assets/stylesheets/sass/global/components/_main-menu.sass
@@ -3,6 +3,7 @@
   background: #fff
   box-shadow: 0 2px 2px rgba(11, 25, 28, 0.1)
   border: 1px solid #e4e4e4
+  border-radius: $border-radius-base
 
   li + li
     margin-top: 0
@@ -12,11 +13,21 @@
 
   li
     border-bottom: 2px dashed #e5e5e5
+    &:first-child
+      a,
+      .link-icon
+        +border-top-radius($border-radius-base)
+      .link-icon
+        +border-left-radius(0)
+
     &:last-child
       border-bottom: none
-
+      a,
       .link-icon
+        +border-bottom-radius($border-radius-base)
         border: none
+      .link-icon
+        +border-left-radius(0)
 
   li.active,
   li:hover
