--- a/public/assets/stylesheets/sass/style.sass
+++ b/public/assets/stylesheets/sass/style.sass
@@ -6,6 +6,7 @@
 @import 'global/components/ingredients-block'
 @import 'global/components/main-menu'
 @import 'global/components/navbar'
+@import 'global/components/primary-content'
 @import 'global/components/recipe-block'
 
 @import 'global/layouts/home'
