--- a/public/layouts/receita.jade
+++ b/public/layouts/receita.jade
@@ -29,20 +29,20 @@ div.page-nova-receita
         //-- Main menu
         nav.main-menu(role="navigation")
           ul.nav.nav-pills.nav-stacked
-            li.active
-              a(href="/#/")
+            li
+              a(href="#/")
                 |Home
                 div.link-icon
                   i.icon.icon-shop
 
-            li
-              a(href="/#/receitas/2")
+            li.active
+              a(href="#/receitas/2")
                 |Receitas
                 div.link-icon
                   i.icon.icon-food-1
 
             li
-              a(href="/#/receitas/nova")
+              a(href="#/nova")
                 |Nova Receita
                 div.link-icon
                   i.icon.icon-doc-1
@@ -50,11 +50,37 @@ div.page-nova-receita
 
       div.col-md-8(ng-if="Receita")
 
-        h1 {{Receita.nome}} - 
-          span.text-info Dificuldade: {{Receita.dificuldade}}
+        article.primary-content
 
-        h3 Porções: {{Receita.num_porcoes}}
+          h1.recipe-title {{Receita.nome}}
 
-        div.ingredients-block
-          div.ingredient-item(ng-repeat="item in Receita.ingredientes")
-            |{{item}}
+          div.recipe-image
+            img.img-responsive(src="assets/images/static/steak-with-potatoes.jpg")
+
+          div.recipe-info.row
+            ul
+              li.col-md-4
+                h5
+                  i.icon.icon-clock-1 
+                  div.recipe-info-caption 15 min
+              li.col-md-4
+                h5
+                  i.icon.icon-user-1 
+                  div.recipe-info-caption Para três
+              li.col-md-4
+                h5
+                  i.icon.icon-beaker-1 
+                  div.recipe-info-caption Fácil
+
+          h3 Ingredientes
+
+          div.ingredients-block
+            div.ingredient-item(ng-repeat="item in Receita.ingredientes")
+              |{{item}}
+            
+
+        //- h1 {{Receita.nome}} - 
+        //-   span.text-info Dificuldade: {{Receita.dificuldade}}
+
+        //- h3 Porções: {{Receita.num_porcoes}}
+
