--- a/public/views/home.html
+++ b/public/views/home.html
@@ -21,11 +21,11 @@
       <div class="col-md-4">
         <nav role="navigation" class="main-menu">
           <ul class="nav nav-pills nav-stacked">
-            <li class="active"><a href="/#/">Home
+            <li class="active"><a href="#/">Home
                 <div class="link-icon"><i class="icon icon-shop"></i></div></a></li>
-            <li><a href="/#/receitas/2">Receitas
+            <li><a href="#/receitas/2">Receitas
                 <div class="link-icon"><i class="icon icon-food-1"></i></div></a></li>
-            <li><a href="/#/receitas/nova">Nova Receita
+            <li><a href="#/nova">Nova Receita
                 <div class="link-icon"><i class="icon icon-doc-1"></i></div></a></li>
           </ul>
         </nav>
@@ -56,43 +56,43 @@
     <div class="container">
       <div class="col-md-4">
         <div class="recipe-block"><a href="index.html">
-            <div class="recipe-title">Bife com Batatas</div>
-            <div class="recipe-image">
-              <div class="recipe-caption">
+            <div class="recipe-block-title">Bife com Batatas</div>
+            <div class="recipe-block-image">
+              <div class="recipe-block-caption">
                 <div class="item"><i class="icon icon-clock-1"></i><span>15 Min</span></div>
                 <div class="item"><i class="icon icon-user-1"></i><span>6 Porções</span></div>
                 <div class="item"><i class="icon icon-beaker-1"></i><span>Fácil</span></div>
               </div><img src="assets/images/static/steak-with-potatoes.jpg" class="img-responsive"/>
             </div>
-            <div class="recipe-footer">
+            <div class="recipe-block-footer">
               <div class="pull-left"><strong>Guilherme Coelho</strong><em>14/12/2014</em></div><a href="#" class="link"><i class="icon icon-plus-squared-alt"></i>Ver Receita</a>
             </div></a></div>
       </div>
       <div class="col-md-4">
         <div class="recipe-block"><a href="index.html">
-            <div class="recipe-title">Sanduíche de Filet Mignon</div>
-            <div class="recipe-image">
-              <div class="recipe-caption">
+            <div class="recipe-block-title">Sanduíche de Filet Mignon</div>
+            <div class="recipe-block-image">
+              <div class="recipe-block-caption">
                 <div class="item"><i class="icon icon-clock-1"></i><span>15 Min</span></div>
                 <div class="item"><i class="icon icon-user-1"></i><span>6 Porções</span></div>
                 <div class="item"><i class="icon icon-beaker-1"></i><span>Fácil</span></div>
               </div><img src="assets/images/static/filet-mignon-sandwich.jpg" class="img-responsive"/>
             </div>
-            <div class="recipe-footer">
+            <div class="recipe-block-footer">
               <div class="pull-left"><strong>Guilherme Coelho</strong><em>14/12/2014</em></div><a href="#" class="link"><i class="icon icon-plus-squared-alt"></i>Ver Receita</a>
             </div></a></div>
       </div>
       <div class="col-md-4">
         <div class="recipe-block"><a href="index.html">
-            <div class="recipe-title">Virado de Repolho</div>
-            <div class="recipe-image">
-              <div class="recipe-caption">
+            <div class="recipe-block-title">Virado de Repolho</div>
+            <div class="recipe-block-image">
+              <div class="recipe-block-caption">
                 <div class="item"><i class="icon icon-clock-1"></i><span>15 Min</span></div>
                 <div class="item"><i class="icon icon-user-1"></i><span>6 Porções</span></div>
                 <div class="item"><i class="icon icon-beaker-1"></i><span>Fácil</span></div>
               </div><img src="assets/images/static/sausage-cabbage-and-tomato-1.jpg" class="img-responsive"/>
             </div>
-            <div class="recipe-footer">
+            <div class="recipe-block-footer">
               <div class="pull-left"><strong>Guilherme Coelho</strong><em>14/12/2014</em></div><a href="#" class="link"><i class="icon icon-plus-squared-alt"></i>Ver Receita</a>
             </div></a></div>
       </div>
