--- a/public/layouts/receita.jade
+++ b/public/layouts/receita.jade
@@ -1,4 +1,4 @@
-div.page-nova-receita
+div.page-receita
   nav.navbar.navbar-default(role="navigation")
     div.container
       //- Brand and toggle get grouped for better mobile display
@@ -23,8 +23,8 @@ div.page-nova-receita
             a(href="#") Cadastrar
    
 
-  div.row
-    div.container
+  div.container
+    div.row
       div.col-md-4
         //-- Main menu
         nav.main-menu(role="navigation")
@@ -50,33 +50,51 @@ div.page-nova-receita
 
       div.col-md-8(ng-if="Receita")
 
-        article.primary-content
+        article.l-receita-content
 
-          h1.recipe-title {{Receita.nome}}
+          h1.l-receita-title {{Receita.nome}}
 
-          div.recipe-image
+          div.l-receita-image
             img.img-responsive(src="assets/images/static/steak-with-potatoes.jpg")
 
-          div.recipe-info.row
+          div.l-receita-info.row
             ul
               li.col-md-4
                 h5
                   i.icon.icon-clock-1 
-                  div.recipe-info-caption 15 min
+                  div.l-receita-info-caption 15 min
               li.col-md-4
                 h5
                   i.icon.icon-user-1 
-                  div.recipe-info-caption Para três
+                  div.l-receita-info-caption Para três
               li.col-md-4
                 h5
                   i.icon.icon-beaker-1 
-                  div.recipe-info-caption Fácil
+                  div.l-receita-info-caption Fácil
 
-          h3 Ingredientes
+          h2.l-receita-section-title Ingredientes
 
-          div.ingredients-block
-            div.ingredient-item(ng-repeat="item in Receita.ingredientes")
-              |{{item}}
+          div.notepad-block
+            div.notepad-block-heading
+
+            div.notepad-item-holder(ng-repeat="item in Receita.ingredientes")
+              span.notepad-number
+                |{{ $index + 1 }}
+              div.notepad-item
+                |{{ item }}
+
+          h2.l-receita-section-title Modo de Preparo
+
+          div.notepad-block
+            div.notepad-block-heading
+
+            div(ng-repeat="item in Receita.ingredientes")
+              span.notepad-number
+                |{{$index+1}}
+              div.notepad-item
+                |Bata no liquidificador todos os ingredientes por mais ou menos dez minutos e meio
+              div.notepad-item
+                &nbsp;
             
 
         //- h1 {{Receita.nome}} - 
