--- a/public/layouts/index.jade
+++ b/public/layouts/index.jade
@@ -30,6 +30,11 @@ body
   //- Angular Route
   script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.js")
   //- Angular components
+
+  //- Local Files
+  //- script(src="assets/javascripts/angular.min.js")
+  //- script(src="assets/javascripts/angular-route.min.js")
+  //- script(src="assets/javascripts/jquery.min.js")
   script(src="app/app.js")
   script(src="app/services.js")
   script(src="app/controllers.js")
