--- a/public/views/nova-receita.html
+++ b/public/views/nova-receita.html
@@ -1,5 +1,5 @@
 
-<div class="page-nova-receita">
+<div class="page-receita">
   <nav role="navigation" class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
@@ -31,18 +31,48 @@
         </nav>
       </div>
       <div class="col-md-8">
-        <div ng-controller="IngredientsCtrl as Ingredients" class="ingredients-block">
-          <div ng-repeat="ingredient in Ingredients.ingredientsList"><span class="ingredient-number">
-               
-              {{ $index + 1 }}</span>
-            <div ng-if="!ingredient.editing" ng-click="Ingredients.editIngredient($index)" class="ingredient-item">
-               
-              {{ ingredient.name }}
+        <article class="l-receita-content">
+          <h2 class="l-receita-section-title">New Ingredientes</h2>
+          <div class="notepad-block">
+            <div class="notepad-block-heading"></div>
+            <div><span class="notepad-number"> </span>
+              <div class="notepad-item">
+                 
+                {{newIngredient.name}}
+              </div>
             </div>
-            <input type="text" ng-if="ingredient.editing" ng-value="ingredient.name" ng-model="Ingredients.ingredientsList[$index].name" ng-keydown="Ingredients.saveIngredient($event, $index, true)" ng-blur="Ingredients.saveIngredient($event, $index)" focus="ingredient.editing" class="ingredient-item editing"/>
+            <input data-ng-model="newIngredient.name" class="notepad-item"/>
           </div>
-          <input type="text" placeholder="Digite o ingrediente e tecle enter" ng-model="Ingredients.newIngredient.name" ng-keydown="Ingredients.addIngredient($event)" class="ingredient-item"/>
-        </div>
+          <h2 class="l-receita-section-title">Ingredientes</h2>
+          <div ng-controller="IngredientsCtrl as Ingredients" class="notepad-block">
+            <div class="notepad-block-heading"></div>
+            <div ng-repeat="ingredient in Ingredients.ingredientsList"><span class="notepad-number">
+                 
+                {{ $index + 1 }}</span>
+              <div ng-if="!ingredient.editing" ng-click="Ingredients.editIngredient($index)" class="notepad-item">
+                 
+                {{ ingredient.name }}
+              </div>
+              <input type="text" ng-if="ingredient.editing" ng-value="ingredient.name" ng-model="Ingredients.ingredientsList[$index].name" ng-keydown="Ingredients.saveIngredient($event, $index, true)" ng-blur="Ingredients.saveIngredient($event, $index)" focus="ingredient.editing" class="notepad-item editing"/>
+            </div>
+            <input type="text" placeholder="Digite o ingrediente e tecle enter" ng-model="Ingredients.newIngredient.name" ng-keydown="Ingredients.addIngredient($event)" class="notepad-item"/>
+          </div>
+          <h2 class="l-receita-section-title">Modo de Preparo</h2>
+          <div ng-controller="IngredientsCtrl as Ingredients" class="notepad-block">
+            <div class="notepad-block-heading"></div>
+            <div ng-repeat="ingredient in Ingredients.ingredientsList"><span class="notepad-number">
+                 
+                {{ $index + 1 }}</span>
+              <div ng-if="!ingredient.editing" ng-click="Ingredients.editIngredient($index)" class="notepad-item">
+                 
+                {{ ingredient.name }}
+              </div>
+              <input type="text" ng-if="ingredient.editing" ng-value="ingredient.name" ng-model="Ingredients.ingredientsList[$index].name" ng-keydown="Ingredients.saveIngredient($event, $index, true)" ng-blur="Ingredients.saveIngredient($event, $index)" focus="ingredient.editing" class="notepad-item editing"/>
+              <div class="notepad-item">&nbsp;</div>
+            </div>
+            <input type="text" placeholder="Digite o ingrediente e tecle enter" ng-model="Ingredients.newIngredient.name" ng-keydown="Ingredients.addIngredient($event)" class="notepad-item"/>
+          </div>
+        </article>
       </div>
     </div>
   </div>
