--- a/public/layouts/home.jade
+++ b/public/layouts/home.jade
@@ -22,8 +22,8 @@ div.page-home
           li
             a(href="#") Cadastrar
 
-  div.row
-    div.container
+  div.container
+    div.row
       div.col-md-4
         //-- Main menu
         nav.main-menu(role="navigation")
@@ -79,8 +79,8 @@ div.page-home
           a.carousel-control.right(href="#carousel-example-generic", role="button", data-slide="next")
             span.icon.icon-right-open
 
-  div.row.l-main-section
-    div.container
+  div.container
+    div.row.l-main-section
       div.col-md-4
         div.recipe-block
           a(href="index.html")
@@ -105,7 +105,7 @@ div.page-home
 
             div.recipe-block-footer
               div.pull-left
-                strong Guilherme Coelho
+                strong Postado em:
                 em 14/12/2014
               a.link(href="#")
                 i.icon.icon-plus-squared-alt
@@ -136,7 +136,7 @@ div.page-home
 
             div.recipe-block-footer
               div.pull-left
-                strong Guilherme Coelho
+                strong Postado em:
                 em 14/12/2014
               a.link(href="#")
                 i.icon.icon-plus-squared-alt
@@ -167,7 +167,7 @@ div.page-home
 
             div.recipe-block-footer
               div.pull-left
-                strong Guilherme Coelho
+                strong Postado em:
                 em 14/12/2014
               a.link(href="#")
                 i.icon.icon-plus-squared-alt
