--- a/public/views/home.html
+++ b/public/views/home.html
@@ -16,8 +16,8 @@
       </div>
     </div>
   </nav>
-  <div class="row">
-    <div class="container">
+  <div class="container">
+    <div class="row">
       <div class="col-md-4">
         <nav role="navigation" class="main-menu">
           <ul class="nav nav-pills nav-stacked">
@@ -52,8 +52,8 @@
       </div>
     </div>
   </div>
-  <div class="row l-main-section">
-    <div class="container">
+  <div class="container">
+    <div class="row l-main-section">
       <div class="col-md-4">
         <div class="recipe-block"><a href="index.html">
             <div class="recipe-block-title">Bife com Batatas</div>
@@ -65,7 +65,7 @@
               </div><img src="assets/images/static/steak-with-potatoes.jpg" class="img-responsive"/>
             </div>
             <div class="recipe-block-footer">
-              <div class="pull-left"><strong>Guilherme Coelho</strong><em>14/12/2014</em></div><a href="#" class="link"><i class="icon icon-plus-squared-alt"></i>Ver Receita</a>
+              <div class="pull-left"><strong>Postado em:</strong><em>14/12/2014</em></div><a href="#" class="link"><i class="icon icon-plus-squared-alt"></i>Ver Receita</a>
             </div></a></div>
       </div>
       <div class="col-md-4">
@@ -79,7 +79,7 @@
               </div><img src="assets/images/static/filet-mignon-sandwich.jpg" class="img-responsive"/>
             </div>
             <div class="recipe-block-footer">
-              <div class="pull-left"><strong>Guilherme Coelho</strong><em>14/12/2014</em></div><a href="#" class="link"><i class="icon icon-plus-squared-alt"></i>Ver Receita</a>
+              <div class="pull-left"><strong>Postado em:</strong><em>14/12/2014</em></div><a href="#" class="link"><i class="icon icon-plus-squared-alt"></i>Ver Receita</a>
             </div></a></div>
       </div>
       <div class="col-md-4">
@@ -93,7 +93,7 @@
               </div><img src="assets/images/static/sausage-cabbage-and-tomato-1.jpg" class="img-responsive"/>
             </div>
             <div class="recipe-block-footer">
-              <div class="pull-left"><strong>Guilherme Coelho</strong><em>14/12/2014</em></div><a href="#" class="link"><i class="icon icon-plus-squared-alt"></i>Ver Receita</a>
+              <div class="pull-left"><strong>Postado em:</strong><em>14/12/2014</em></div><a href="#" class="link"><i class="icon icon-plus-squared-alt"></i>Ver Receita</a>
             </div></a></div>
       </div>
     </div>
