--- a/public/views/nova-receita.html
+++ b/public/views/nova-receita.html
@@ -16,8 +16,8 @@
       </div>
     </div>
   </nav>
-  <div class="row">
-    <div class="container">
+  <div class="container">
+    <div class="row">
       <div class="col-md-4">
         <nav role="navigation" class="main-menu">
           <ul class="nav nav-pills nav-stacked">
@@ -32,47 +32,27 @@
       </div>
       <div class="col-md-8">
         <article class="l-receita-content">
-          <h2 class="l-receita-section-title">New Ingredientes</h2>
+          <h2 class="l-receita-section-title">Ingredientes</h2>
           <div class="notepad-block">
             <div class="notepad-block-heading"></div>
             <div data-ng-repeat="ingredient in ingredients" class="notepad-item-holder"><span class="notepad-number">
                  
                 {{ $index + 1 }}</span>
-              <div class="notepad-item">
-                 
-                {{ ingredient.name }}
-              </div>
+              <div data-ng-if="!ingredient.editing" data-ng-click="editIngredient($index)" class="notepad-item">{{ ingredient.description }}</div>
+              <input type="text" data-ng-if="ingredient.editing" data-ng-value="ingredient.description" data-ng-model="ingredients[$index].description" data-ng-keydown="saveIngredient($event, $index, true)" focus="ingredient.editing" class="notepad-item editing"/>
             </div>
-            <input data-ng-model="newIngredient.name" data-ng-keydown="addIngredient($event)" class="notepad-item"/>
-          </div>
-          <h2 class="l-receita-section-title">Ingredientes</h2>
-          <div ng-controller="IngredientsCtrl as Ingredients" class="notepad-block">
-            <div class="notepad-block-heading"></div>
-            <div ng-repeat="ingredient in Ingredients.ingredientsList"><span class="notepad-number">
-                 
-                {{ $index + 1 }}</span>
-              <div ng-if="!ingredient.editing" ng-click="Ingredients.editIngredient($index)" class="notepad-item">
-                 
-                {{ ingredient.name }}
-              </div>
-              <input type="text" ng-if="ingredient.editing" ng-value="ingredient.name" ng-model="Ingredients.ingredientsList[$index].name" ng-keydown="Ingredients.saveIngredient($event, $index, true)" ng-blur="Ingredients.saveIngredient($event, $index)" focus="ingredient.editing" class="notepad-item editing"/>
-            </div>
-            <input type="text" placeholder="Digite o ingrediente e tecle enter" ng-model="Ingredients.newIngredient.name" ng-keydown="Ingredients.addIngredient($event)" class="notepad-item"/>
+            <input placeholder="Digite o ingrediente e aperte enter" data-ng-model="newIngredient.description" data-ng-keydown="addIngredient($event)" class="notepad-item"/>
           </div>
           <h2 class="l-receita-section-title">Modo de Preparo</h2>
-          <div ng-controller="IngredientsCtrl as Ingredients" class="notepad-block">
+          <div class="notepad-block">
             <div class="notepad-block-heading"></div>
-            <div ng-repeat="ingredient in Ingredients.ingredientsList"><span class="notepad-number">
+            <div data-ng-repeat="step in steps" class="notepad-item-holder"><span class="notepad-number">
                  
                 {{ $index + 1 }}</span>
-              <div ng-if="!ingredient.editing" ng-click="Ingredients.editIngredient($index)" class="notepad-item">
-                 
-                {{ ingredient.name }}
-              </div>
-              <input type="text" ng-if="ingredient.editing" ng-value="ingredient.name" ng-model="Ingredients.ingredientsList[$index].name" ng-keydown="Ingredients.saveIngredient($event, $index, true)" ng-blur="Ingredients.saveIngredient($event, $index)" focus="ingredient.editing" class="notepad-item editing"/>
-              <div class="notepad-item">&nbsp;</div>
+              <div data-ng-if="!step.editing" data-ng-click="editStep($index)" class="notepad-item">{{ step.description }}</div>
+              <input type="text" data-ng-if="step.editing" data-ng-value="step.description" data-ng-model="steps[$index].description" data-ng-keydown="saveStep($event, $index, true)" focus="step.editing" class="notepad-item editing"/>
             </div>
-            <input type="text" placeholder="Digite o ingrediente e tecle enter" ng-model="Ingredients.newIngredient.name" ng-keydown="Ingredients.addIngredient($event)" class="notepad-item"/>
+            <textarea placeholder="Digite a instrução e aperte enter" data-ng-model="newStep.description" data-ng-keydown="addStep($event)" class="notepad-item"></textarea>
           </div>
         </article>
       </div>
