Fix issues on nova-receita.jade

--- a/public/assets/stylesheets/sass/global/layouts/_receitas.sass
+++ b/public/assets/stylesheets/sass/global/layouts/_receitas.sass
@@ -42,3 +42,8 @@
 
     i
       font-size: 32px
+
+  .l-receita-label
+    font-family: $font-family-serif
+    font-size: 18px
+    font-weight: normal
