--- a/public/layouts/index.jade
+++ b/public/layouts/index.jade
@@ -1,5 +1,5 @@
 doctype html
-html(lang="en" ng-app="panelando")
+html(lang="en" data-ng-app="panelando")
 head
   meta(charset="utf-8")
   meta(http-equiv="X-UA-Compatible", content="IE=edge")
