--- a/public/layouts/nova-receita.jade
+++ b/public/layouts/nova-receita.jade
@@ -52,6 +52,42 @@ div.page-receita
 
         article.l-receita-content
 
+          h3 Nome da Receita
+
+          div.notepad-block
+          
+            div.notepad-item-holder
+              input.notepad-item
+
+          div.l-receita-image(style="margin-top: 30px")
+            img.img-responsive(src="assets/images/static/steak-with-potatoes.jpg")
+
+          div.l-receita-info.row
+            ul
+              li.col-md-4
+                h5
+                  i.icon.icon-clock-1 
+                  div.l-receita-info-caption
+                    div.l-receita-info-input
+                      input.form-control
+                    | &nbsp;min
+              li.col-md-4
+                h5
+                  i.icon.icon-user-1 
+                  div.l-receita-info-caption
+                    div.l-receita-info-input
+                      input.form-control
+                    | &nbsp;porções
+              li.col-md-4
+                h5
+                  i.icon.icon-beaker-1 
+                  div.l-receita-info-caption
+                    div.l-receita-info-input
+                      select.form-control
+                        option Fácil
+                        option Médio
+                        option Difícil
+
           h3.l-receita-section-titl Ingredientes
 
           div.notepad-block
