--- a/public/views/nova-receita.html
+++ b/public/views/nova-receita.html
@@ -32,6 +32,48 @@
       </div>
       <div class="col-md-8">
         <article class="l-receita-content">
+          <h3>Nome da Receita</h3>
+          <div class="notepad-block">
+            <div class="notepad-item-holder">
+              <input class="notepad-item"/>
+            </div>
+          </div>
+          <div style="margin-top: 30px" class="l-receita-image"><img src="assets/images/static/steak-with-potatoes.jpg" class="img-responsive"/></div>
+          <div class="l-receita-info row">
+            <ul>
+              <li class="col-md-4">
+                <h5><i class="icon icon-clock-1"> </i>
+                  <div class="l-receita-info-caption">
+                    <div class="l-receita-info-input">
+                      <input class="form-control"/>
+                    </div>&nbsp;min
+                  </div>
+                </h5>
+              </li>
+              <li class="col-md-4">
+                <h5><i class="icon icon-user-1"> </i>
+                  <div class="l-receita-info-caption">
+                    <div class="l-receita-info-input">
+                      <input class="form-control"/>
+                    </div>&nbsp;porções
+                  </div>
+                </h5>
+              </li>
+              <li class="col-md-4">
+                <h5><i class="icon icon-beaker-1"> </i>
+                  <div class="l-receita-info-caption">
+                    <div class="l-receita-info-input">
+                      <select class="form-control">
+                        <option>Fácil</option>
+                        <option>Médio</option>
+                        <option>Difícil</option>
+                      </select>
+                    </div>
+                  </div>
+                </h5>
+              </li>
+            </ul>
+          </div>
           <h3 class="l-receita-section-titl">Ingredientes</h3>
           <div class="notepad-block">
             <div class="notepad-block-heading"></div>
