--- a/public/layouts/index.jade
+++ b/public/layouts/index.jade
@@ -22,19 +22,19 @@ body
   ng-view
 
   //- jQuery (necessary for Bootstrap"s JavaScript plugins)
-  script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
+  //- script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
   //- Include all compiled plugins (below), or include individual files as needed
-  script(src="assets/javascripts/bootstrap.min.js")
+  //- script(src="assets/javascripts/bootstrap.min.js")
   //- Angular Framework
-  script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js")
+  //- script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js")
   //- Angular Route
-  script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.js")
+  //- script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.js")
   //- Angular components
 
   //- Local Files
-  //- script(src="assets/javascripts/angular.min.js")
-  //- script(src="assets/javascripts/angular-route.min.js")
-  //- script(src="assets/javascripts/jquery.min.js")
+  script(src="assets/javascripts/angular.min.js")
+  script(src="assets/javascripts/angular-route.min.js")
+  script(src="assets/javascripts/jquery.min.js")
   script(src="app/app.js")
   script(src="app/services.js")
   script(src="app/controllers.js")
