--- a/public/layouts/index.jade
+++ b/public/layouts/index.jade
@@ -35,6 +35,7 @@ body
   script(src="assets/javascripts/angular.min.js")
   script(src="assets/javascripts/angular-route.min.js")
   script(src="assets/javascripts/jquery.min.js")
+  script(src="assets/javascripts/dropzone.js")
   script(src="app/app.js")
   script(src="app/services.js")
   script(src="app/controllers.js")
