--- a/public/layouts/nova-receita.jade
+++ b/public/layouts/nova-receita.jade
@@ -60,6 +60,7 @@ div.page-receita
               input.notepad-item
 
           div.l-receita-image(style="margin-top: 30px")
+            form(action="assets/javascripts/server.php" class="dropzone")
             img.img-responsive(src="assets/images/static/steak-with-potatoes.jpg")
 
           div.l-receita-info.row
