--- a/public/views/nova-receita.html
+++ b/public/views/nova-receita.html
@@ -38,7 +38,9 @@
               <input class="notepad-item"/>
             </div>
           </div>
-          <div style="margin-top: 30px" class="l-receita-image"><img src="assets/images/static/steak-with-potatoes.jpg" class="img-responsive"/></div>
+          <div style="margin-top: 30px" class="l-receita-image">
+            <form action="assets/javascripts/server.php" class="dropzone"></form><img src="assets/images/static/steak-with-potatoes.jpg" class="img-responsive"/>
+          </div>
           <div class="l-receita-info row">
             <ul>
               <li class="col-md-4">
