--- a/public/layouts/nova-receita.jade
+++ b/public/layouts/nova-receita.jade
@@ -60,8 +60,16 @@ div.page-receita
               input.notepad-item
 
           div.l-receita-image(style="margin-top: 30px")
-            form(action="assets/javascripts/server.php" class="dropzone")
-            img.img-responsive(src="assets/images/static/steak-with-potatoes.jpg")
+            div.fileinput.fileinput-new(data-provides="fileinput")
+              div.fileinput-preview(data-trigger="fileinput")
+
+              div
+                span.btn.btn-default.btn-file
+                span.fileinput-new Select image
+                span.fileinput-exists Change
+                input(type="hidden", name="MAX_FILE_SIZE", value="30000000")
+                input(type="file", name="file")
+                a.btn.btn-default.fileinput-exists(href="#", data-dismiss="fileinput") Remove
 
           div.l-receita-info.row
             ul
