--- a/public/views/nova-receita.html
+++ b/public/views/nova-receita.html
@@ -39,7 +39,13 @@
             </div>
           </div>
           <div style="margin-top: 30px" class="l-receita-image">
-            <form action="assets/javascripts/server.php" class="dropzone"></form><img src="assets/images/static/steak-with-potatoes.jpg" class="img-responsive"/>
+            <div data-provides="fileinput" class="fileinput fileinput-new">
+              <div data-trigger="fileinput" class="fileinput-preview"></div>
+              <div><span class="btn btn-default btn-file"></span><span class="fileinput-new">Select image</span><span class="fileinput-exists">Change</span>
+                <input type="hidden" name="MAX_FILE_SIZE" value="30000000"/>
+                <input type="file" name="file"/><a href="#" data-dismiss="fileinput" class="btn btn-default fileinput-exists">Remove</a>
+              </div>
+            </div>
           </div>
           <div class="l-receita-info row">
             <ul>
