Add angular file upload

--- a/public/assets/stylesheets/sass/style.sass
+++ b/public/assets/stylesheets/sass/style.sass
@@ -3,6 +3,7 @@
 @import 'global/vendor/bourbon'
 
 @import 'global/components/carousel'
+@import 'global/components/fileinput'
 @import 'global/components/main-menu'
 @import 'global/components/notepad-block'
 @import 'global/components/navbar'
