--- a/public/layouts/nova-receita.jade
+++ b/public/layouts/nova-receita.jade
@@ -60,16 +60,28 @@ div.page-receita
               input.notepad-item
 
           div.l-receita-image(style="margin-top: 30px")
-            div.fileinput.fileinput-new(data-provides="fileinput")
-              div.fileinput-preview(data-trigger="fileinput")
 
+
+            div.fileinput.fileinput-new(data-provides="fileinput")
+              div.fileinput-preview.thumbnail(data-trigger="fileinput", style="width: 200px; height: 150px;")
               div
                 span.btn.btn-default.btn-file
-                span.fileinput-new Select image
-                span.fileinput-exists Change
-                input(type="hidden", name="MAX_FILE_SIZE", value="30000000")
-                input(type="file", name="file")
+                  span.fileinput-new Select image
+                  span.fileinput-exists Change 
+                  input(type="hidden", name="MAX_FILE_SIZE", value="30000000")
+                  input(type="file", name="file")
+
                 a.btn.btn-default.fileinput-exists(href="#", data-dismiss="fileinput") Remove
+
+              hr
+              
+
+              input(type="text" ng-model="myModelObj")
+              input(type="file" ng-file-select="onFileSelect($files)")
+              button(class="btn btn-lg btn-danger" ng-click="superUpload()") Super Upload
+
+
+              
 
           div.l-receita-info.row
             ul
