--- a/public/views/nova-receita.html
+++ b/public/views/nova-receita.html
@@ -40,13 +40,10 @@
           </div>
           <div style="margin-top: 30px" class="l-receita-image">
             <div data-provides="fileinput" class="fileinput fileinput-new">
-              <div data-trigger="fileinput" style="width: 200px; height: 150px;" class="fileinput-preview thumbnail"></div>
+              <div data-trigger="fileinput" class="fileinput-preview"></div>
               <div><span class="btn btn-default btn-file"><span class="fileinput-new">Select image</span><span class="fileinput-exists">Change </span>
-                  <input type="hidden" name="MAX_FILE_SIZE" value="30000000"/>
-                  <input type="file" name="file"/></span><a href="#" data-dismiss="fileinput" class="btn btn-default fileinput-exists">Remove</a></div>
-              <hr/>
-              <input type="text" ng-model="myModelObj"/>
-              <input type="file" ng-file-select="onFileSelect($files)"/>
+                  <input type="text" ng-model="recipe.image"/>
+                  <input type="file" name="file" ng-file-select="onFileSelect($files)"/></span><a href="#" data-dismiss="fileinput" class="btn btn-default fileinput-exists">Remove</a></div>
               <button ng-click="superUpload()" class="btn btn-lg btn-danger">Super Upload</button>
             </div>
           </div>
