--- a/public/assets/stylesheets/sass/global/components/_fileinput.sass
+++ b/public/assets/stylesheets/sass/global/components/_fileinput.sass
@@ -15,8 +15,6 @@
     direction: ltr
     cursor: pointer
   
-
-
 .fileinput
   margin-bottom: 9px
   display: inline-block
@@ -46,9 +44,9 @@
 .fileinput-new .fileinput-exists
   display: none
 
+
 .fileinput-inline .fileinput-controls
   display: inline
-
 
 .fileinput-filename
   vertical-align: middle
@@ -58,10 +56,11 @@
 .form-control .fileinput-filename
   vertical-align: bottom
 
-
 .fileinput.input-group
   display: table
 
+.fileinput-preview img
+  max-width: 100%
 
 // Not 100% correct, but helps in typical use case
 .fileinput-new.input-group .btn-file,
