--- a/public/layouts/nova-receita.jade
+++ b/public/layouts/nova-receita.jade
@@ -59,20 +59,17 @@ div.page-receita
             div.notepad-item-holder
               input.notepad-item
 
-          div.l-receita-image(style="margin-top: 30px")
+          div.l-receita-image.row(style="margin-top: 30px")
 
 
             div.fileinput.fileinput-new(data-provides="fileinput")
               div.fileinput-preview(data-trigger="fileinput")
-              div
+              div.fileinput-new
                 span.btn.btn-default.btn-file
                   span.fileinput-new Select image
-                  span.fileinput-exists Change 
                   //- input(type="hidden", name="MAX_FILE_SIZE", value="30000000")
                   input(type="text", ng-model="recipe.image")
                   input(type="file", name="file", ng-file-select="onFileSelect($files)")
-
-                a.btn.btn-default.fileinput-exists(href="#", data-dismiss="fileinput") Remove
               
               button(class="btn btn-lg btn-danger" ng-click="superUpload()") Super Upload
 
