--- a/public/views/nova-receita.html
+++ b/public/views/nova-receita.html
@@ -38,12 +38,12 @@
               <input class="notepad-item"/>
             </div>
           </div>
-          <div style="margin-top: 30px" class="l-receita-image">
+          <div style="margin-top: 30px" class="l-receita-image row">
             <div data-provides="fileinput" class="fileinput fileinput-new">
               <div data-trigger="fileinput" class="fileinput-preview"></div>
-              <div><span class="btn btn-default btn-file"><span class="fileinput-new">Select image</span><span class="fileinput-exists">Change </span>
+              <div class="fileinput-new"><span class="btn btn-default btn-file"><span class="fileinput-new">Select image</span>
                   <input type="text" ng-model="recipe.image"/>
-                  <input type="file" name="file" ng-file-select="onFileSelect($files)"/></span><a href="#" data-dismiss="fileinput" class="btn btn-default fileinput-exists">Remove</a></div>
+                  <input type="file" name="file" ng-file-select="onFileSelect($files)"/></span></div>
               <button ng-click="superUpload()" class="btn btn-lg btn-danger">Super Upload</button>
             </div>
           </div>
